added select component for devfile
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/src/webview/create-component/app/component.scss
+++ b/src/webview/create-component/app/component.scss
@@ -113,7 +113,7 @@ button {
     padding: 5px 14px !important;
 }
 
-.MuiOutlinedInput-input:disabled {
+.MuiOutlinedInput-input:disabled, .Mui-disabled {
     -webkit-text-fill-color: white !important;
 }
 
