Add 'Show welcome page on startup' checkbox
Signed-off-by: Jessica He <jhe@redhat.com>

--- a/src/webview/welcome/app/welcome.scss
+++ b/src/webview/welcome/app/welcome.scss
@@ -74,9 +74,8 @@ header {
 }
 
 .content__image__preview {
-    max-width: 100%;
-    width: 400px;
-    height: 400px;
+    max-width: 400px;
+    max-height: 400px;
 }
 
 .last__image {
