--- a/src/webview/survey/app/index.css
+++ b/src/webview/survey/app/index.css
@@ -1,7 +1,7 @@
 .sd-root-modern,
 .sd-container-modern,
 .sd-title.sd-container-modern__title {
-    background-Color: var(--vscode-editor-background) !important;
+    background-color: var(--vscode-editor-background) !important;
     color: var(--vscode-editor-foreground) !important;
     font-family: var(--vscode-editor-font-family) !important;
     font-size: var(--vscode-editor-font-size) !important;
@@ -54,7 +54,7 @@
 }
 
 .sd-element__title span {
-    background-Color: var(--vscode-editor-background) !important;
+    background-color: var(--vscode-editor-background) !important;
     color: var(--vscode-editor-foreground) !important;
     font-size: var(--vscode-editor-font-size) !important;
     font-weight: var(--vscode-editor-font-weight) !important;
