--- a/src/webview/welcome/app/welcome.scss
+++ b/src/webview/welcome/app/welcome.scss
@@ -114,7 +114,7 @@ section {
 .sticky-section-content .sticky-section-exten {
     top: 0;
     width: 100%;
-    height: 16vh;
+    height: 12rem;
 }
 
 .sticky-content-section {
