--- a/src/webview/serverless-function/app/home.scss
+++ b/src/webview/serverless-function/app/home.scss
@@ -18,16 +18,11 @@ button {
     display: flex;
     flex-direction: column;
     font-family: var(--vscode-font-family);
-    // overflow-y: scroll;
 }
 
 .title {
     width: 100%;
     margin-bottom: 1rem;
-}
-
-.sub {
-    margin: 1rem 0rem;
 }
 
 .subTitle {
@@ -52,25 +47,6 @@ button {
     }
 
     text-transform: none;
-}
-
-.buttonDiv {
-    margin: 2rem 0rem;
-    position: fixed;
-}
-
-.buttonDivWithBottom {
-    display: inline-flex;
-    border-top: 1px solid;
-    // border-color: inherit;
-    width: 100%;
-    height: 3rem;
-    background-color: var(--vscode-editor-background) !important;
-    backdrop-filter: blur(15px);
-    padding-top: 1rem;
-    margin-top: 2rem;
-    position: fixed;
-    bottom: -3%;
 }
 
 .strategyContainer {
@@ -101,6 +77,7 @@ button {
 }
 
 .MuiFormHelperText-root {
+    width: 13rem;
     color: var(--vscode-foreground) !important;
     margin-left: 0px !important;
 }
@@ -109,22 +86,14 @@ button {
     color: #EE0000 !important;
 }
 
-.MuiOutlinedInput-input {
-    padding: 5px 14px !important;
-    border: 0.5px solid var(--vscode-dropdown-border) !important;
-}
-
 .MuiSelect-select, .MuiMenu-paper, .MuiAutocomplete-inputRoot {
     background-color: var(--vscode-dropdown-background) !important;
     color: var(--vscode-dropdown-foreground) !important;
 }
 
-.MuiInputBase-input {
-    padding-left: 8px !important;
-}
-
-.MuiAutocomplete-input {
-    padding-left: 0px !important;
+.MuiInputLabel-root {
+    background-color: transparent;
+    color: var(--vscode-settings-textInputForeground) !important;
 }
 
 .MuiAutocomplete-inputRoot {
@@ -143,12 +112,16 @@ button {
 
 .MuiFormControl-root {
     border: none;
-    max-width: 50%;
+    max-width: 45%;
     &:hover {
         border: none;
     }
 }
 
-.MuiAccordionSummary-root {
-    padding: 0px !important;
+.MuiSvgIcon-root {
+    color: var(--vscode-settings-textInputForeground) !important;
+}
+
+.MuiOutlinedInput-input {
+    height: 1rem !important;
 }
