--- a/src/webview/serverless-function/app/home.scss
+++ b/src/webview/serverless-function/app/home.scss
@@ -38,6 +38,7 @@ button {
     overflow: hidden;
     text-overflow: ellipsis;
     color: var(--vscode-button-foreground);
+    width: 3rem;
 
     &:hover {
         background-color: '#BE0000' !important;
@@ -170,4 +171,13 @@ button {
 
 .MuiOutlinedInput-input {
     width: 70% !important;
+}
+
+.MuiAutocomplete-noOptions {
+    background-color: var(--vscode-settings-textInputBackground);
+    color: var(--vscode-settings-textInputForeground) !important;
+}
+
+li:hover {
+    background-color: var(--vscode-button-hoverBackground) !important;
 }
