reverted to func v1.10.0 and removed deploy functionality
Signed-off-by: unknown <msivasub@win.redhat.com>

--- a/src/webview/serverless-function/app/home.scss
+++ b/src/webview/serverless-function/app/home.scss
@@ -39,7 +39,7 @@ button {
     text-overflow: ellipsis;
     color: var(--vscode-button-foreground);
     width: 3rem;
-
+    height: 2.5rem !important;
     &:hover {
         background-color: '#BE0000' !important;
     }
