added invoke function
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/src/webview/serverless-function/app/home.scss
+++ b/src/webview/serverless-function/app/home.scss
@@ -88,6 +88,7 @@ button {
 
 .MuiTypography-root {
     font-family: var(--vscode-font-family) !important;
+    color: var(--vscode-settings-textInputForeground) !important;
 }
 
 .MuiFormHelperText-root {
@@ -160,7 +161,7 @@ button {
 }
 
 .Mui-disabled {
-    -webkit-text-fill-color: var(--vscode-settings-textInputForeground) !important;
+    -webkit-text-fill-color: var(--vscode-titleBar-inactiveForeground) !important;
 }
 
 .Mui-active {
