--- a/src/webview/welcome/app/welcome.scss
+++ b/src/webview/welcome/app/welcome.scss
@@ -45,15 +45,6 @@ header {
     }
 }
 
-.content__area--full-scroll {
-    background-color: unset !important;
-    margin-bottom: 90vh;
-
-    .section--settings {
-        margin: 0 0 1em 0;
-    }
-}
-
 .header__logo {
     display: flex;
     flex-direction: row;
@@ -78,23 +69,6 @@ header {
     max-height: 400px;
 }
 
-.last__image {
-    height: 30rem;
-    margin-left: 5rem;
-}
-
-.fixMargin {
-    margin-top: -70px;
-}
-
-.lastone {
-    max-height: 25rem;
-}
-
-.link__configure {
-    margin-left: 10px;
-}
-
 section {
     display: flex;
     flex-wrap: wrap;
@@ -109,50 +83,6 @@ section {
         margin-top: 0;
         margin-bottom: 1em;
     }
-}
-
-.sticky-section-content .sticky-section-exten {
-    top: 0;
-    width: 100%;
-}
-
-@media screen and (min-width: 120px) and (max-width: 400px) {
-    .sticky-section-content .sticky-section-exten{
-        height: 8vh !important;
-    }
-
-    .sticky-section {
-        height: 50vh !important;
-    }
-}
-
-@media only screen and (min-width: 440px) and (max-width: 1080px) {
-    .sticky-section-content .sticky-section-exten{
-        height: 10vh !important;
-    }
-
-    .sticky-section {
-        height: 65vh !important;
-    }
-}
-
-@media only screen and (min-width: 1080px)  and (max-width: 2500px)  {
-    .sticky-section-content .sticky-section-exten{
-        height: 12vh !important;
-    }
-
-    .sticky-section {
-        height: 65vh !important;
-    }
-}
-
-.sticky-content-section {
-    height: 60vh;
-    padding-left: 3rem;
-}
-
-.section--full {
-    flex-flow: column;
 }
 
 .section--settings {
@@ -179,14 +109,6 @@ section {
     flex-flow: column wrap;
 }
 
-.extensionContainer {
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50rem;
-}
-
 .section__header {
     display: flex;
     align-items: baseline;
@@ -199,19 +121,6 @@ section {
 
     h2 {
         margin-bottom: 0;
-    }
-
-    .link__configure,
-    .link__learn-more {
-        visibility: hidden;
-    }
-
-    &:hover {
-
-        .link__configure,
-        .link__learn-more {
-            visibility: visible;
-        }
     }
 }
 
@@ -236,11 +145,6 @@ section {
     width: 600px;
 }
 
-.sticky-section-hint {
-    width: 53.125rem;
-    word-spacing: 2px !important;
-}
-
 .section__footer {
     margin: 2rem;
     width: fit-content;
@@ -254,75 +158,10 @@ section {
     }
 }
 
-.scroll__content {
-    height: 27rem;
-    overflow-y: auto;
-}
-
-.scroll__content::-webkit-scrollbar {
-    width: 0;
-}
-
-.imageContent {
-    padding: 1em;
-}
-
-.conent--section--settings {
-    flex: 0 1 auto;
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: 6px;
-    margin: 1em;
-    padding: 1em;
-
-    .vscode-dark & {
-        background: var(--color-background--lighten-075);
-    }
-
-    .vscode-light & {
-        background: var(--color-background--darken-05);
-    }
-}
-
-.section__brand__preview,
-.section__preview {
+.section__brand__preview {
     flex: 0 1 auto;
     position: relative;
     margin-left: 0rem;
-}
-
-.sticky-section {
-    display: flex;
-    flex-direction: row;
-    margin-left: 10rem;
-    top: 0%;
-    background: inherit;
-}
-
-.sticky-section-content {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-}
-
-.sticky-section label {
-    margin: 0px;
-    position: sticky;
-    top: 50%;
-    transform: translate(0, -50%);
-    text-align: center;
-}
-
-
-.section__title {
-    flex: 1 0 auto;
-    margin: 0;
-}
-
-.section__title--primary {
-    font-size: 3rem;
-    margin: 1em;
-    justify-content: center;
 }
 
 .section__whatsnew {
