added error boundry, upstream survey-react-ui v1.9.135 and add survey-core dependency
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/src/webview/feedback/app/feedback.css
+++ b/src/webview/feedback/app/feedback.css
@@ -68,3 +68,7 @@
 .footerText:hover {
     border-bottom: 3px solid #EE0000 !important;
 }
+
+.sd-rating__item-text {
+    color: var(--vscode-foreground) !important;
+}
