[build] Fix Sass @import rules deprecation warnings after update to Dart Sass 3.0.0+
```
$ node ./build/esbuild.mjs

esbuild: building for production: No
[watch] build started for Extension and the Webviews for testing/debugging...
▲ [WARNING] Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.

More info and automated migrator: https://sass-lang.com/d/import [plugin sass-plugin]

    src/webview/welcome/app/welcome.scss:0:8:
      0 │ './base'
        ╵         ^

  The plugin "sass-plugin" was triggered by this import

    src/webview/welcome/app/welcomePage.tsx:23:7:
      23 │ import './welcome.scss';
         ╵        ~~~~~~~~~~~~~~~~

▲ [WARNING] Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.

More info and automated migrator: https://sass-lang.com/d/import [plugin sass-plugin]

    src/webview/welcome/app/welcome.scss:1:8:
      1 │ './buttons'
        ╵         ^

  The plugin "sass-plugin" was triggered by this import

    src/webview/welcome/app/welcomePage.tsx:23:7:
      23 │ import './welcome.scss';
         ╵        ~~~~~~~~~~~~~~~~

▲ [WARNING] Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.

More info and automated migrator: https://sass-lang.com/d/import [plugin sass-plugin]

    src/webview/welcome/app/welcome.scss:2:8:
      2 │ './icons'
        ╵         ^

  The plugin "sass-plugin" was triggered by this import

    src/webview/welcome/app/welcomePage.tsx:23:7:
      23 │ import './welcome.scss';
         ╵        ~~~~~~~~~~~~~~~~

▲ [WARNING] Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.

More info and automated migrator: https://sass-lang.com/d/import [plugin sass-plugin]

    src/webview/welcome/app/welcome.scss:3:8:
      3 │ './utils'
        ╵         ^

  The plugin "sass-plugin" was triggered by this import

    src/webview/welcome/app/welcomePage.tsx:23:7:
      23 │ import './welcome.scss';
         ╵        ~~~~~~~~~~~~~~~~

[watch]

--- a/src/webview/welcome/app/welcome.scss
+++ b/src/webview/welcome/app/welcome.scss
@@ -1,7 +1,7 @@
-@import './base';
-@import './buttons';
-@import './icons';
-@import './utils';
+@use 'base';
+@use 'buttons';
+@use 'icons';
+@use 'utils';
 
 body {
     &.vscode-light {
